--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,13 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        maven { url 'https://maven.google.com' }
         maven { url "https://jitpack.io" }
     }
 
     dependencies {
 
-        classpath androidBuildTools
+        classpath androidGradlePlugin
         classpath frodoPlugin
         classpath kotlinGradlePlugin
         classpath realmPlugin
@@ -27,6 +28,7 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+        maven { url 'https://maven.google.com' }
         maven { url "https://jitpack.io" }
     }
 }
