--- a/data/build.gradle
+++ b/data/build.gradle
@@ -8,9 +8,6 @@ android {
 
     defaultConfig {
 
-        defaultPublishConfig 'release'
-        publishNonDefault true
-
         multiDexEnabled true
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -43,9 +40,9 @@ tasks.withType(Test) {
 
 dependencies {
 
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    api fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile project(':domain')
+    api project(':domain')
 
     def androidLibs = [
             appCompat: [group: 'com.android.support', name: 'appcompat-v7', version: androidSDKVersion]
@@ -73,26 +70,26 @@ dependencies {
     ]
 
     def appDependencies = [
-            [configuration: 'compile', dependency: androidLibs.appCompat],
+            [configuration: 'api', dependency: androidLibs.appCompat],
 
-            [configuration: 'compile', dependency: libs.converterGson],
-            [configuration: 'compile', dependency: libs.dagger],
+            [configuration: 'api', dependency: libs.converterGson],
+            [configuration: 'api', dependency: libs.dagger],
             [configuration: 'kapt', dependency: libs.daggerCompiler],
-            [configuration: 'compile', dependency: libs.gson],
-            [configuration: 'provided', dependency: libs.javaxAnnotation],
-            [configuration: 'compile', dependency: libs.kotlin],
-            [configuration: 'compile', dependency: libs.kotlinReflect],
-            [configuration: 'compile', dependency: libs.retrofit],
-            [configuration: 'compile', dependency: libs.retrofitRxJava2Adapter],
-            [configuration: 'compile', dependency: libs.rxjava2],
+            [configuration: 'api', dependency: libs.gson],
+            [configuration: 'compileOnly', dependency: libs.javaxAnnotation],
+            [configuration: 'api', dependency: libs.kotlin],
+            [configuration: 'api', dependency: libs.kotlinReflect],
+            [configuration: 'api', dependency: libs.retrofit],
+            [configuration: 'api', dependency: libs.retrofitRxJava2Adapter],
+            [configuration: 'api', dependency: libs.rxjava2],
 
-            [configuration: 'androidTestCompile', dependency: testLibs.espresso, options:
+            [configuration: 'androidTestImplementation', dependency: testLibs.espresso, options:
                     { exclude group: 'com.android.support', module: 'support-annotations' }],
-            [configuration: 'testCompile', dependency: testLibs.junit],
-            [configuration: 'testCompile', dependency: testLibs.kotlinUnitTest],
-            [configuration: 'testCompile', dependency: testLibs.mockitoKotlin, options:
+            [configuration: 'testImplementation', dependency: testLibs.junit],
+            [configuration: 'testImplementation', dependency: testLibs.kotlinUnitTest],
+            [configuration: 'testImplementation', dependency: testLibs.mockitoKotlin, options:
                     { exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib' }],
-            [configuration: 'testCompile', dependency: testLibs.mockWebServer]
+            [configuration: 'testImplementation', dependency: testLibs.mockWebServer]
     ]
 
     appDependencies.each {
