--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,6 +12,7 @@ ext {
     espressoVersion = '2.2.2'
     facebookSdkVersion = '4.21.1'
     frodoVersion = '0.8.3'
+    glideVersion = '4.0.0-RC0'
     googlePlayServicesVersion = '10.2.6'
     gsonVersion = '2.8.0'
     javaxAnnotationVersion = '1.0'
@@ -21,6 +22,7 @@ ext {
     mockitoKotlinVersion = '1.4.0'
     mockWebServerVersion = '3.6.0'
     multidexVersion = '1.0.1'
+    paperParcelVersion = '2.0.1'
     realmVersion = '3.3.2'
     retrofitVersion = '2.2.0'
     rippleEffectVersion = '1.3.1'
