--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,7 +2,7 @@ ext {
 
     // LIBRARY VERSIONS
 
-    androidGradlePluginVersion = '3.0.0-alpha3'
+    androidGradlePluginVersion = '3.0.0-alpha4'
     androidSDKVersion = '25.3.1'
 
     avLoadingIndicatorViewVersion = '2.1.3'
@@ -10,9 +10,11 @@ ext {
     constraintLayoutVersion = '1.0.2'
     daggerVersion = '2.9'
     espressoVersion = '2.2.2'
-    facebookSdkVersion = '4.21.1'
+    facebookSdkVersion = '4.23.0'
     frodoVersion = '0.8.3'
+    diagonalifyVersion = '1.1'
     glideVersion = '4.0.0-RC0'
+    googleMapsUtilityVersion = '0.5+'
     googlePlayServicesVersion = '10.2.6'
     gsonVersion = '2.8.0'
     javaxAnnotationVersion = '1.0'
