--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -21,16 +21,19 @@ ext {
     junitVersion = '4.12'
     kotlinVersion = '1.1.2-5'
     leakCanaryVersion = '1.5'
-    mockitoKotlinVersion = '1.4.0'
+    mockitoKotlinVersion = '1.5.0'
     mockWebServerVersion = '3.6.0'
     multidexVersion = '1.0.1'
     paperParcelVersion = '2.0.1'
     realmVersion = '3.3.2'
     retrofitVersion = '2.2.0'
     rippleEffectVersion = '1.3.1'
+    runnerVersion = '0.5'
     rxAndroidVersion = '2.0.1'
     rxjava2Version = '2.0.8'
     stethoVersion = '1.4.2'
+    testButlerVersion = '1.3.1'
+    uiAutomatorVersion = '2.1.1'
 
     // CLASSPATH's
 
