--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,10 +17,12 @@ ext {
     googleMapsUtilityVersion = '0.5+'
     googlePlayServicesVersion = '10.2.6'
     gsonVersion = '2.8.0'
+    hamcrestVersion = '1.3'
     javaxAnnotationVersion = '1.0'
     junitVersion = '4.12'
     kotlinVersion = '1.1.2-5'
     leakCanaryVersion = '1.5'
+    mockitoVersion = '2.6.1'
     mockitoKotlinVersion = '1.5.0'
     mockWebServerVersion = '3.6.0'
     multidexVersion = '1.0.1'
