--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -20,7 +20,7 @@ ext {
     hamcrestVersion = '1.3'
     javaxAnnotationVersion = '1.0'
     junitVersion = '4.12'
-    kotlinVersion = '1.1.2-5'
+    kotlinVersion = '1.1.3'
     leakCanaryVersion = '1.5'
     mockitoVersion = '2.6.1'
     mockitoKotlinVersion = '1.5.0'
