--- a/android.gradle
+++ b/android.gradle
@@ -4,6 +4,8 @@ project.android.buildToolsVersion "25.0.2"
 project.android.defaultConfig.minSdkVersion 16
 project.android.defaultConfig.targetSdkVersion 25
 
-project.android.sourceSets.main.java.srcDirs += 'src/main/kotlin'
 project.android.sourceSets.androidTest.java.srcDirs += 'src/androidTest/kotlin'
+project.android.sourceSets.debug.java.srcDirs += 'src/debug/kotlin'
+project.android.sourceSets.main.java.srcDirs += 'src/main/kotlin'
+project.android.sourceSets.release.java.srcDirs += 'src/release/kotlin'
 project.android.sourceSets.test.java.srcDirs += 'src/test/kotlin'
