--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,12 @@
 
         <!-- ACTIVITIES - END -->
 
+        <!-- SERVICES - BEGIN -->
+
+        <service android:name=".device.location.LocationService"/>
+
+        <!-- SERVICES - END -->
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id"
