--- a/device/build.gradle
+++ b/device/build.gradle
@@ -30,6 +30,7 @@ dependencies {
 
     api fileTree(dir: 'libs', include: ['*.jar'])
 
+    api project(':data')
     api project(':domain')
 
     def libs = [
