Configuring database migration.

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -15,7 +15,14 @@ android {
 
     buildTypes {
 
+        debug {
+
+            buildConfigField "Long", "DATABASE_SCHEMA_VERSION", "0"
+        }
+
         release {
+
+            buildConfigField "Long", "DATABASE_SCHEMA_VERSION", "0"
 
             minifyEnabled false
             // shrinkResources true
