--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
         applicationId "com.orogersilva.superpub.dublin"
 
-        multiDexEnabled true
+        multiDexEnabled false
 
         resValue "string", "facebook_app_id", System.getenv("FACEBOOK_ID")
 
@@ -87,7 +87,7 @@ android {
 
             resValue "string", "google_maps_api_key", System.getenv("GOOGLE_MAPS_API_KEY")
 
-            minifyEnabled false
+            minifyEnabled true
             // shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     rootProject.file('tools/proguard/rules-proguard.pro')
