--- a/data/build.gradle
+++ b/data/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.fernandocejas.frodo'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'realm-android'
@@ -24,7 +23,7 @@ android {
 
             buildConfigField "Long", "DATABASE_SCHEMA_VERSION", "0L"
 
-            minifyEnabled false
+            minifyEnabled true
             // shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     rootProject.file('tools/proguard/rules-proguard.pro')
