--- a/device/build.gradle
+++ b/device/build.gradle
@@ -13,7 +13,7 @@ android {
 
         release {
 
-            minifyEnabled false
+            minifyEnabled true
             // shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     rootProject.file('tools/proguard/rules-proguard.pro')
