--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,6 +96,22 @@ android {
         }
     }
 
+    splits {
+
+        abi {
+
+            enable true
+            reset()
+            include 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'mips', 'x86', 'x86_64'
+            universalApk true
+        }
+
+        density {
+
+            enable false
+        }
+    }
+
     dexOptions {
 
         preDexLibraries true
@@ -231,6 +247,23 @@ dependencies {
 
     appDependencies.each {
         add(it.configuration, it.dependency, it.options)
+    }
+}
+
+ext.abiCodes = ['armeabi': 1, 'armeabi-v7a': 2, 'arm64-v8a': 3, 'mips': 4, 'x86': 5, 'x86_64': 6].withDefault {0}
+
+import com.android.build.OutputFile
+
+android.applicationVariants.all { variant ->
+
+    variant.outputs.each { output ->
+
+        def baseAbiVersionCode = project.ext.abiCodes.get(output.getFilter(OutputFile.ABI))
+
+        if (baseAbiVersionCode != null) {
+
+            output.versionCodeOverride = baseAbiVersionCode * 1000000 + variant.versionCode
+        }
     }
 }
 
