--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,5 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-# Disabling AAPT2 temporarily (in Android Studio 3.0 Canary 5)
+# Disabling AAPT2 temporarily while it is unstable.
 android.enableAapt2=false
