--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,8 @@ android {
 
         applicationId "com.orogersilva.superpub.dublin"
 
+        multiDexEnabled true
+
         resValue "string", "fabric_api_key", System.getenv("FABRIC_API_KEY")
         resValue "string", "facebook_app_id", System.getenv("FACEBOOK_ID")
 
@@ -72,8 +74,6 @@ android {
 
             ext.enableCrashlytics = false
 
-            multiDexEnabled true
-
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     rootProject.file('tools/proguard/rules-proguard-debug.pro')
@@ -90,7 +90,7 @@ android {
 
             resValue "string", "google_maps_api_key", System.getenv("GOOGLE_MAPS_API_KEY")
 
-            minifyEnabled true
+            minifyEnabled false
             // shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'),
                     rootProject.file('tools/proguard/rules-proguard.pro')
