Disabling AAPT2 because is unstable.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
@@ -13,8 +14,10 @@ android {
 
         multiDexEnabled true
 
-        resValue "string", "fabric_api_key", System.getenv("FABRIC_API_KEY")
-        resValue "string", "facebook_app_id", System.getenv("FACEBOOK_ID")
+        manifestPlaceholders = [
+                fabric_api_key: System.getenv("FABRIC_API_KEY"),
+                facebook_app_id: System.getenv("FACEBOOK_ID")
+        ]
 
         testInstrumentationRunner "com.orogersilva.superpub.dublin.CustomInstrumentationTestRunner"
     }
@@ -70,7 +73,9 @@ android {
             buildConfigField "String", "FACEBOOK_GRAPH_API",
                 "\"https://graph.facebook.com/\""
 
-            resValue "string", "google_maps_api_key", "AIzaSyDJvGdZBvVoVgwhGregyLAAM6Lwjm_cV7c"
+            manifestPlaceholders = [
+                    google_maps_api_key: "AIzaSyDJvGdZBvVoVgwhGregyLAAM6Lwjm_cV7c"
+            ]
 
             ext.enableCrashlytics = false
 
@@ -88,7 +93,9 @@ android {
             buildConfigField "String", "FACEBOOK_GRAPH_API",
                 "\"https://graph.facebook.com/\""
 
-            resValue "string", "google_maps_api_key", System.getenv("GOOGLE_MAPS_API_KEY")
+            manifestPlaceholders = [
+                    google_maps_api_key: System.getenv("GOOGLE_MAPS_API_KEY")
+            ]
 
             minifyEnabled false
             // shrinkResources true
@@ -106,7 +113,7 @@ android {
             enable true
             reset()
             include 'armeabi', 'armeabi-v7a', 'arm64-v8a', 'mips', 'x86', 'x86_64'
-            universalApk true
+            universalApk false
         }
 
         density {
