--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -2,7 +2,7 @@ ext {
 
     // LIBRARY VERSIONS
 
-    androidGradlePluginVersion = '3.0.0-alpha5'
+    androidGradlePluginVersion = '3.0.0-alpha6'
     androidSDKVersion = '25.3.1'
 
     avLoadingIndicatorViewVersion = '2.1.3'
@@ -10,7 +10,7 @@ ext {
     constraintLayoutVersion = '1.0.2'
     daggerVersion = '2.9'
     espressoVersion = '2.2.2'
-    fabricVersion = '1.3.13'
+    fabricVersion = '1.+'
     facebookSdkVersion = '4.23.0'
     glideVersion = '4.0.0-RC0'
     googlePlayServicesVersion = '11.0.0'
