Settings for CI and CD.

--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ buildscript {
         classpath androidGradlePlugin
         classpath fabricPlugin
         classpath kotlinGradlePlugin
+        classpath playPublisherPlugin
         classpath realmPlugin
 
         // NOTE: Do not place your application dependencies here; they belong
