--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.github.triplet.play'
 apply plugin: 'io.fabric'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
@@ -7,6 +8,15 @@ apply plugin: 'kotlin-android-extensions'
 apply from: "${rootProject.getRootDir()}/tools/git/script-git-version.gradle"
 
 android {
+
+    playAccountConfigs {
+
+        defaultAccountConfig {
+
+            serviceAccountEmail = System.getenv("SERVICE_ACCOUNT_EMAIL")
+            jsonFile = file('play.json')
+        }
+    }
 
     defaultConfig {
 
@@ -18,6 +28,8 @@ android {
                 fabric_api_key: System.getenv("FABRIC_API_KEY"),
                 facebook_app_id: System.getenv("FACEBOOK_ID")
         ]
+
+        playAccountConfig = playAccountConfigs.defaultAccountConfig
 
         testInstrumentationRunner "com.orogersilva.superpub.dublin.CustomInstrumentationTestRunner"
     }
@@ -104,6 +116,13 @@ android {
 
             signingConfig signingConfigs.release
         }
+    }
+
+    play {
+
+        track = 'alpha'
+        untrackOld = true
+        uploadImages = true
     }
 
     splits {
