--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -25,6 +25,7 @@ ext {
     mockWebServerVersion = '3.6.0'
     multidexVersion = '1.0.1'
     paperParcelVersion = '2.0.1'
+    playPublisherVersion = '1.2.0'
     realmVersion = '3.3.2'
     retrofitVersion = '2.2.0'
     rippleEffectVersion = '1.3.1'
@@ -40,5 +41,6 @@ ext {
     androidGradlePlugin = "com.android.tools.build:gradle:$androidGradlePluginVersion"
     fabricPlugin = "io.fabric.tools:gradle:$fabricVersion"
     kotlinGradlePlugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+    playPublisherPlugin = "com.github.triplet.gradle:play-publisher:$playPublisherVersion"
     realmPlugin = "io.realm:realm-gradle-plugin:$realmVersion"
 }
