--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,17 +49,17 @@
 
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="${facebook_app_id}"
+            android:value="@string/facebook_id"
             />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="${google_maps_api_key}"
+            android:value="@string/google_maps_api_key"
             />
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="${fabric_api_key}"
+            android:value="@string/fabric_api_key"
             />
 
     </application>
