Applying manifestPlaceholders for injecting Fabric's key on manifest.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="@string/fabric_api_key"
+            android:value="${fabric_api_key}"
             />
 
     </application>
