--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,10 @@ android {
 
         multiDexEnabled true
 
-        resValue "string", "fabric_api_key", System.getenv("FABRIC_API_KEY")
+        manifestPlaceholders = [
+                fabric_api_key: System.getenv("FABRIC_API_KEY")
+        ]
+
         resValue "string", "facebook_id", System.getenv("FACEBOOK_ID")
 
         playAccountConfig = playAccountConfigs.defaultAccountConfig
