Show location settings dialog for user, when necessary.

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -58,6 +58,7 @@ dependencies {
             converterGson: [group: 'com.squareup.retrofit2', name: 'converter-gson', version: retrofitVersion],
             dagger: [group: 'com.google.dagger', name: 'dagger', version: daggerVersion],
             daggerCompiler: [group: 'com.google.dagger', name: 'dagger-compiler', version: daggerVersion],
+            googlePlayServicesLocation: [group: 'com.google.android.gms', name: 'play-services-location', version: googlePlayServicesVersion],
             gson: [group: 'com.google.code.gson', name: 'gson', version: gsonVersion],
             javaxAnnotation: [group: 'javax.annotation', name: 'jsr250-api', version: javaxAnnotationVersion],
             kotlin: [group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: kotlinVersion],
@@ -81,6 +82,7 @@ dependencies {
             [configuration: 'api', dependency: libs.converterGson],
             [configuration: 'api', dependency: libs.dagger],
             [configuration: 'kapt', dependency: libs.daggerCompiler],
+            [configuration: 'api', dependency: libs.googlePlayServicesLocation],
             [configuration: 'api', dependency: libs.gson],
             [configuration: 'compileOnly', dependency: libs.javaxAnnotation],
             [configuration: 'api', dependency: libs.kotlin],
