--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,6 @@
 version: 2
-dependencies:
-    override:
-        - chmod +x gradlew
+before_script:
+  - chmod +x gradlew
 jobs:
   build:
     working_directory: ~/code
