--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,12 +8,21 @@ jobs:
       JVM_OPTS: -Xmx3200m
     steps:
       - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Download Dependencies
+          command: chmod +x ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Run Unit Tests
-          command: ./gradlew testDevDebugUnitTest
+          command: chmod +x ./gradlew testDevDebugUnitTest
       - run:
           name: Run Packaging
-          command: ./gradlew assembleDevDebug
+          command: chmod +x ./gradlew assembleDevDebug
       - store_artifacts:
           path: app/build/reports
           destination: reports
