--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,13 +9,16 @@ jobs:
     steps:
       - checkout
       - run:
-        name: Download Dependencies
-        command: ./gradlew androidDependencies
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
       - run:
-        name: Run Tests
-        command: .gradlew testDebugUnitTest
+          name: Run Unit Tests
+          command: ./gradlew testDevDebugUnitTest
+      - run:
+          name: Package App
+          command: ./gradlew assembleDevDebug
       - store_artifacts:
-        path: app/build/reports
-        destination: reports
+          path: app/build/reports
+          destination: reports
       - store_test_results:
-        path: app/build/test-results
+          path: app/build/test-results
