--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,11 @@ machine:
     version: openjdk8
 
 dependencies:
+    pre:
+        - echo y | android update sdk --no-ui --all --filter "platform-tools, tools"
+        - echo y | android update sdk --no-ui --all --filter "android-25, build-tools-25.0.2"
+        - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository"
+        - echo y | android update sdk --no-ui --all --filter "extra-android-support"
     override:
         - chmod +x gradlew
 
