--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -8,12 +8,16 @@ sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
     test.java.srcDirs += 'src/test/kotlin'
     test.resources.srcDirs += 'src/test/resources'
+
+    // For Gradle 4.0
+    main.output.classesDir = new File(buildDir, "classes/main")
+    test.output.classesDir = new File(buildDir, "classes/test")
 }
 
 // Necessary to load resource files from theirs test folders.
 task copyTestResources(type: Copy) {
     from sourceSets.test.resources
-    into sourceSets.test.output.classesDirs
+    into sourceSets.test.output.classesDir
 }
 
 processTestResources.dependsOn copyTestResources
